--- a/water_flow.yaml
+++ b/water_flow.yaml
@@ -17,26 +17,30 @@ web_server:
   port: 80
 
 sensor:
-  - platform: pulse_counter
+  - platform: pulse_meter
     pin: D5
     name: "Ground Well Water Flow Rate"
-    update_interval: 60s
-    filters:
-      - multiply: 0.1515  # 1/6.6 to convert Hz to L/min
     unit_of_measurement: "L/min"
+    icon: "mdi:water"
+    filters:
+      - multiply: 0.002096  # 1/477 to convert pulses to liters
     total:
       name: "Ground Well Total Water Usage"
       unit_of_measurement: "L"
       accuracy_decimals: 2
+    timeout: 10s
+    update_interval: 1s
   
-  - platform: pulse_counter
+  - platform: pulse_meter
     pin: D6
     name: "PDAM Water Flow Rate"
-    update_interval: 60s
-    filters:
-      - multiply: 0.1515  # 1/6.6 to convert Hz to L/min
     unit_of_measurement: "L/min"
+    icon: "mdi:water"
+    filters:
+      - multiply: 0.002096  # 1/477 to convert pulses to liters
     total:
       name: "PDAM Total Water Usage"
       unit_of_measurement: "L"
       accuracy_decimals: 2
+    timeout: 10s
+    update_interval: 1s
